--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.18.13",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "framer-motion": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-outside-click-handler": "^1.3.1",
     "tailwindcss": "^3.2.7"
   }
 }
